@@ -40,7 +40,7 @@
             <key> <string>after_script_name</string> </key>
             <value>
               <list>
-                <string>SimulationMovement_editDeliveryValue</string>
+                <string>SimulationMovement_calculateCausalityState</string>
               </list>
             </value>
         </item>
@@ -56,22 +56,24 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>SimulationMovement_edit</string> </value>
+            <value> <string>calculate_causality</string> </value>
         </item>
         <item>
             <key> <string>method_id</string> </key>
             <value>
               <list>
-                <string>_edit</string>
+                <string>_set.*</string>
               </list>
             </value>
         </item>
         <item>
+            <key> <string>once_per_transaction</string> </key>
+            <value> <int>0</int> </value>
+        </item>
+        <item>
             <key> <string>portal_type_filter</string> </key>
             <value>
-              <list>
-                <string>Simulation Movement</string>
-              </list>
+              <none/>
             </value>
         </item>
         <item>
