@@ -7,5 +7,5 @@ order_movement_simulation_interaction_workflow
 order_simulation_interaction_workflow
 preference_workflow
 rule_interaction_workflow
-simulation_movement_interaction_workflow
+simulation_movement_causality_interaction_workflow
 validation_workflow
