@@ -1,3 +1,7 @@
+2007-09-06 alex
+* rename simulation_movement_interaction_workflow to simulation_movement_causality_interaction_workflow
+* follow style used in delivery_causality_interaction_workflow
+
 2007-09-06 aurel
 * add archive tool
 
